--- a/app.json
+++ b/app.json
@@ -8,8 +8,26 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "Arfa实用工具",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/hello/hello",
+        "text": "实时天气"
+      },
+      {
+        "pagePath": "pages/map/map",
+        "text": "我的附近"
+      }
+    ],
+    "color": "#8B4513",
+    "selectedColor": "#FF6347"
   },
   "permission": {
     "scope.userLocation": {
